--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
             <input type="button" value="PHONE NUMBER">
         </div>
         <div class="amount" id="amountd">
-            <input type="text" placeholder=" ENTER HERE">
+            <input id="textfield" type="text" placeholder=" ENTER HERE">
 
         </div>
         <div id = "sendbu" class="sendbu">
-            <input type="button" onclick="" value="SEND">
+            <input type="button" onclick="sendmsg()" value="SEND">
         </div>
     </div>
     
